<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context=".activities.RsyncConfigActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/arguments" />

    <EditText
        android:hint="@string/arguments_hint"
        android:id="@+id/editTextArgs"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textNoSuggestions"
        android:scrollHorizontally="false"
        android:typeface="monospace"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/known_hosts"
        android:layout_marginTop="16dp" />

    <EditText
        android:hint="@string/known_hosts_hint"
        android:id="@+id/editTextKnownHosts"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textNoSuggestions"
        android:typeface="monospace"
        android:minHeight="48dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/checkForUpdates"
        android:text="@string/check_for_updates"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp" />
</LinearLayout>
